# ShadowEye

./: .gitignore  CMakeLists.txt  README.md  _build.cmd
Headers/: CheckProcess.h  SmartHandle.h
MySQL_API/: CMakeLists.txt  MySQL_DB.cpp  MySQL_DB.h  immutable_variables.h
Source/: main.cpp
lib/Debug/: MySQL_API.lib
lib/Release/: MySQL_API.lib
